--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "joi": "^17.2.1",
-    "mongoose": "^5.10.8"
+    "mongoose": "^5.10.8",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
