Add integration tests

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/app.js",
-    "dev": "nodemon src/app.js"
+    "dev": "nodemon src/app.js",
+    "test:unit": "mocha test/unit/**/*.test.js",
+    "test:integration": "mocha --exit test/integration/**/*.test.js",
+    "test": "npm run test:unit && npm run test:integration"
   },
   "keywords": [],
   "author": "",
