--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "test:unit": "mocha test/unit/**/*.test.js",
     "test:integration": "mocha --exit test/integration/**/*.test.js",
     "test": "npm run test:unit && npm run test:integration",
-    "coverage:text": "nyc npm run test",
-    "coverage:html": "nyc --reporter=html npm run test"
+    "coverage:text": "nyc npm run test:unit",
+    "coverage:html": "nyc --reporter=html npm run test:unit"
   },
   "keywords": [],
   "author": "",
